chapter12/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: webserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webserver
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:1.29.1
          volumeMounts:
            - mountPath: /var/run/nginx/stats
              name: stats
            - mountPath: /etc/nginx/conf.d
              name: config
              readOnly: true
        - name: nginx-metrics-exporter
          image: nginx/nginx-prometheus-exporter:1.5.0
          args:
            - --nginx.scrape-uri=unix:///var/run/nginx/stats/stats.sock
          volumeMounts:
            - mountPath: /var/run/nginx/stats
              name: stats
      volumes:
        - name: stats
          emptyDir:
            sizeLimit: 1Mi
        - name: config
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-metrics
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: webserver
  ports:
    - protocol: TCP
      port: 9113
