chapter12/kube-api-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: kube-api-deny
spec:
  endpointSelector:
    matchExpressions:
      - key: io.kubernetes.pod.namespace
        operator: NotIn
        values:
          - kube-system
  enableDefaultDeny:
    egress: false
  egressDeny:
    - toEntities:
        - kube-apiserver
