chapter12/webserver-no-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: webserver-no-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: webserver
  egress:
    - {}
